# chessing

./: .tmuxinator.yml  Cargo.toml
client/: Cargo.toml
client/src/: action.rs  app.rs  board.rs  input.rs  main.rs  piece.rs  pieces.rs  state.rs  stats.rs
server/: .gitignore  database.sqlite  go.mod  go.sum  main.go
server/internal/board/: bishop.go  board.go  king.go  knight.go  pawn.go  piece.go  queen.go  rook.go
server/internal/database/: migration.go  models.go  queries.sql.go  schema.sql  sqlc.yaml
server/internal/database/config/: queries.sql  schema.sql  sqlc.yaml
server/internal/pieces/: bishop.go  king.go  knight.go  pawn.go  piece.go  queen.go  rook.go
server/internal/server/: auth.go  board.go  client.go  clients.go  game.go  hub.go  moves.go  piece.go  routes.go  server.go
src/: app.rs  main.rs  state.rs
